--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -7,7 +7,7 @@ on:
         paths:
             - 'sgcmapi/**'
     workflow_dispatch:
-
+    workflow_call:
 jobs:
     build:
         runs-on: ubuntu-latest
